infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: comments
  template:
    metadata:
      labels:
        apps: comments
    spec:
      containers:
      - name: comments
        image: ibro2002/comments:latest
        ports:
          - containerPort: 4005
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: event-bus-srv
# spec:
#   selector:
#     app: event-bus
#   type: ClusterIP
#   ports:
#   - protocol: TCP
#     port: 4005
#     targetPort: 4005
