infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: event-bus
  template:
    metadata:
      labels:
        apps: event-bus
    spec:
      containers:
      - name: event-bus
        image: ibro2002/event-bus:latest
        # ports:
        #   - containerPort: 4005
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: event-bus-srv
# spec:
#   selector:
#     app: event-bus
#   type: ClusterIP
#   ports:
#   - protocol: TCP
#     port: 4005
#     targetPort: 4005
