infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: moderation
  template:
    metadata:
      labels:
        apps: moderation
    spec:
      containers:
      - name: moderation
        image: ibro2002/moderation:latest
        ports:
          - containerPort: 4005
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: event-bus-srv
# spec:
#   selector:
#     app: event-bus
#   type: ClusterIP
#   ports:
#   - protocol: TCP
#     port: 4005
#     targetPort: 4005
