infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: posts
  template:
    metadata:
      labels:
        apps: posts
    spec:
      containers:
      - name: posts
        image: ibro2002/posts:latest
        ports:
          - containerPort: 4000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: posts-clusterip-srv
# spec:
#   selector:
#     app: posts
#   ports:
#   - name: posts-clusterip-ports
#     protocol: TCP
#     port: 4000
#     targetPort: 4000
