infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: query
  template:
    metadata:
      labels:
        apps: query
    spec:
      containers:
      - name: query
        image: ibro2002/query:latest
        # ports:
        #   - containerPort: 4005
---
 

apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    apps: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
